Updated post langchain package updates

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-fastapi==0.100.1
-haystack==0.12.0
 openai==0.27.8
 python-dotenv==1.0.0
 semantic-kernel==0.3.4.dev0
-starlette
-torch
-transformers
-uvicorn
-langchain
-tiktoken
-qdrant_client
-nest_asyncio
-pypdf
-faiss-cpu
-bs4
+starlette==0.36.1
+torch==2.2.0
+transformers==4.37.2
+uvicorn==0.27.0
+langchain==0.1.4
+tiktoken==0.5.2
+qdrant_client==1.7.1
+nest_asyncio==1.6.0
+pypdf==4.0.1
+faiss-cpu==1.7.4
+bs4==0.0.2
+langchain-community==0.0.16
+langchain-openai==0.0.5
